--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,11 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>moontalk-releases</id>
+            <url>https://repo.moontalk.space/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 </project>
